visual do projeto

--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@
         <img src="./assets/img/teste03.png" class="importancia__imagem" alt="">
         <div class="importancia__cartilha">
             <img src="./assets/img/download-da-nuvem (1).png" alt="imagem de download em formato de nuvem " />
-            <a href="./assets/CARTILHA - UEAFTO.pdf" download="">
-                <div class="importancia__cartilha-download">
+            <a class="importancia__cartilha-download" href="./assets/CARTILHA - UEAFTO.pdf" download="">
                   <p class="importancia__cartilha-texto">Baixar cartilha em pdf</p>
-                </div>
-              </a>
+            </a>
         </div>
     </section>
 
@@ -133,7 +131,7 @@
 
     <section class="formulario" id="formulario">
         <h2 class="formulario__titulo">Formulario</h2>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdFNj3AL3WcopofSKYSNTXfb0eZ7TysCuTH-ATTcc-qTCdJTg/viewform?embedded=true" width="350" height="450" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        <iframe class="formulario__link" src="https://docs.google.com/forms/d/e/1FAIpQLSdFNj3AL3WcopofSKYSNTXfb0eZ7TysCuTH-ATTcc-qTCdJTg/viewform?embedded=true" width="350" height="450" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
     </section>
 
     <hr/>
@@ -153,28 +151,46 @@
         <h2 class="autores__titulo">Autores</h2>
         <div class="autores__responsividade">
             <div class="autores__div">
-                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="Logo da AluraBooks">
-                <p class="autores__texto">Profa. Erica Feio Carneiro Nunes</p>
+                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="perfil do autor">
+                <div class="autores__descricao">
+                    <p class="autores__texto">Profa. Erica Feio Carneiro Nunes</p>
+                    <a class="autores__insta" target="_blank" rel="external" href="https://www.instagram.com/"><i class="fa fa-instagram"> Erica Nunes</i></a>
+                </div>
             </div>
             <div class="autores__div">
-                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="Logo da AluraBooks">
-                <p class="autores__texto">Gabriel Pelais Dias</p>
+                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="perfil do autor">
+                <div class="autores__descricao">
+                    <p class="autores__texto">Gabriel Pelais Dias </p>
+                    <a class="autores__insta" target="_blank" rel="external" href="https://www.instagram.com/"><i class="fa fa-instagram"> Gabriel Dias</i></a>
+                </div>
             </div>
             <div class="autores__div">
-                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="Logo da AluraBooks">
-                <p class="autores__texto">Matheus da Silva Gomes</p>
+                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="perfil do autor">
+                <div class="autores__descricao">
+                    <p class="autores__texto">Matheus da Silva Gomes</p>
+                    <a class="autores__insta" target="_blank" rel="external" href="https://www.instagram.com/"><i class="fa fa-instagram"> Matheus Gomes</i></a>
+                </div>
             </div>
             <div class="autores__div">
-                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="Logo da AluraBooks">
-                <p class="autores__texto">Maythê Ribeiro de Medeiros</p>
+                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="perfil do autor">
+                <div class="autores__descricao">
+                    <p class="autores__texto">Maythê Ribeiro de Medeiros</p>
+                    <a class="autores__insta" target="_blank" rel="external" href="https://www.instagram.com/"><i class="fa fa-instagram"> Maythê Medeiros</i></a>
+                </div>
             </div>
             <div class="autores__div">
-                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="Logo da AluraBooks">
-                <p class="autores__texto">Thalyta Karollyna Costa Vilhena</p>
+                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="perfil do autor">
+                <div class="autores__descricao">
+                    <p class="autores__texto">Thalyta Karollyna Costa Vilhena</p>
+                    <a class="autores__insta" target="_blank" rel="external" href="https://www.instagram.com/"><i class="fa fa-instagram"> Thalyta Vilhena</i></a>
+                </div>
             </div>
             <div class="autores__div">
-                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="Logo da AluraBooks">
-                <p class="autores__texto">Thiago dos Santos Batista</p>
+                <img src="./assets/img/fotopessoal.png" class="autores__imagem" alt="perfil do autor">
+                <div class="autores__descricao">
+                    <p class="autores__texto">Thiago dos Santos Batista</p>
+                    <a class="autores__insta" target="_blank" rel="external" href="https://www.instagram.com/"><i class="fa fa-instagram"> Thiago Batista</i></a>
+                </div>
             </div>
         </div>
         
