centralizacao do formulario

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#importancia" class="lista-menu__link">Importância</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#formulario" class="lista-menu__link">Formulario</a>
+                    <a href="#formulario" class="lista-menu__link">Formulário</a>
                 </li>
                 <li class="lista-menu__item">
                     <a href="#ueafto" class="lista-menu__link">UEAFTO</a>
@@ -61,7 +61,7 @@
                     <a href="#importancia" class="opcoes__link">Importância</a>
                 </li>
                 <li class="lista-menu__item">
-                    <a href="#formulario" class="opcoes__link">Formulario</a>
+                    <a href="#formulario" class="opcoes__link">Formulário</a>
                 </li>
                 <li class="lista-menu__item">
                     <a href="#ueafto" class="opcoes__link">UEAFTO</a>
@@ -130,7 +130,7 @@
     <hr/>
 
     <section class="formulario" id="formulario">
-        <h2 class="formulario__titulo">Formulario</h2>
+        <h2 class="formulario__titulo">Formulário</h2>
         <iframe class="formulario__link" src="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeB7iKFNdcXbCmIdw4VEbCtqOmimoyDf3Yho5_UWkLMhWgYGg/formResponse?embedded=true" width="350" height="450" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
     </section>
 
@@ -244,7 +244,7 @@
                 <li class="lista-rodape__titulo">Outros</li>
                 <li class="lista-rodape__item">
                     <img src="./assets/img/LayersTech.svg" alt="Logo do formulario">
-                    <a target="_blank" rel="external" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeB7iKFNdcXbCmIdw4VEbCtqOmimoyDf3Yho5_UWkLMhWgYGg/formResponse?embedded=true" class="lista-rodape__link">Formulario</a>
+                    <a target="_blank" rel="external" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeB7iKFNdcXbCmIdw4VEbCtqOmimoyDf3Yho5_UWkLMhWgYGg/formResponse?embedded=true" class="lista-rodape__link">Formulário</a>
                 </li>
                 <li class="lista-rodape__item">
                     <img src="./assets/img/LayersTech.svg" alt="Logo dos direitos autorais">
