--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
 
     <section class="importancia" id="importancia">
         <h2 class="importancia__titulo">Importância da participação social</h2>
-        <img src="./assets/img/teste01.png" class="importancia__imagem" alt="cartilha pag 01">
-        <img src="./assets/img/teste02.png" class="importancia__imagem" alt="cartilha pag 02">
-        <img src="./assets/img/teste03.png" class="importancia__imagem importancia__imagem-pag03" alt="cartilha pag 03">
+        <div class="importancia__div-imagem">
+            <img src="./assets/img/teste01.png" class="importancia__imagem" alt="cartilha pag 01">
+            <img src="./assets/img/teste02.png" class="importancia__imagem" alt="cartilha pag 02">
+            <img src="./assets/img/teste03.png" class="importancia__imagem importancia__imagem-pag03" alt="cartilha pag 03">
+        </div>
         <div class="importancia__cartilha">
             <img src="./assets/img/download-da-nuvem (1).png" alt="imagem de download em formato de nuvem " />
             <a class="importancia__cartilha-download" href="./assets/CARTILHA - UEAFTO.pdf" download="">
@@ -132,7 +134,15 @@
 
     <section class="formulario" id="formulario">
         <h2 class="formulario__titulo">Formulário</h2>
-        <iframe class="formulario__link" src="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeB7iKFNdcXbCmIdw4VEbCtqOmimoyDf3Yho5_UWkLMhWgYGg/formResponse?embedded=true" width="360" height="900" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        <div class="formulario__tela">
+            <div class="formulario__tela-imagem">
+                <img src="./assets/img/formulario-img.png" class="formulario__imagem  item order2" alt="pessoa com um formulario aberto">
+            </div>
+            <div class="formulario__google" >
+                <iframe class="formulario__link  item order1 " src="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeB7iKFNdcXbCmIdw4VEbCtqOmimoyDf3Yho5_UWkLMhWgYGg/formResponse?embedded=true" width="360" height="900" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+            </div>
+            
+        </div>
     </section>
 
     <hr/>
