--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <hr/>
 
     <section class="formulario" id="formulario">
-        <h2 class="formulario__titulo">Formulário</h2>
+        <h2 class="formulario__titulo">Formulário da Ouvidoria UEAFTO</h2>
         <div class="formulario__tela">
             <div class="formulario__tela-imagem">
                 <img src="./assets/img/formulario-img.png" class="formulario__imagem  item order2" alt="pessoa com um formulario aberto">
@@ -159,7 +159,7 @@
     <hr>
 
     <section class="autores" id="autores">
-        <h2 class="autores__titulo">Autores</h2>
+        <h2 class="autores__titulo">Autores do Projeto</h2>
         <div class="autores__responsividade">
             <div class="autores__div">
                 <img src="./assets/img/foto-perfil.jpg" class="autores__imagem" alt="perfil do autor">
