pequenos detalhes no design

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <hr/>
 
     <section class="importancia" id="importancia">
-        <h2 class="importancia__titulo">Importância da participação social</h2>
+        <h2 class="importancia__titulo">Cartilha: Importância da participação social</h2>
         <div class="importancia__div-imagem">
             <img src="./assets/img/teste01.png" class="importancia__imagem" alt="cartilha pag 01">
             <img src="./assets/img/teste02.png" class="importancia__imagem" alt="cartilha pag 02">
