alteracoes de links

--- a/index.html
+++ b/index.html
@@ -213,24 +213,45 @@
             <ul class="lista-rodape">
                 <li class="lista-rodape__titulo">Universidae do Estado do Pará</li>
                 <li class="lista-rodape__item">
-                    <a href="#" class="lista-rodape__link">Governador: Helder Zahluth Barbalho</a>
+                    <p class="lista-rodape__nome">Governador: Helder Zahluth Barbalho</p>
                 </li>
                 <li class="lista-rodape__item">
-                    <a href="#" class="lista-rodape__link">Reitor: Clay Anderson Nunes Chagas</a>
+                    <p class="lista-rodape__nome">Reitor: Clay Anderson Nunes Chagas</p>
                 </li>
                 <li class="lista-rodape__item">
-                    <a href="#" class="lista-rodape__link">Vice-reitora: Ilma Pastana Ferreira</a>
+                    <p class="lista-rodape__nome">Vice-reitora: Ilma Pastana Ferreira</p>
                 </li>
                 <li class="lista-rodape__item">
-                    <a href="#" class="lista-rodape__link">Diretor: Emanuel de Jesus Soares de Souza</a>
+                    <p class="lista-rodape__nome">Diretor: Emanuel de Jesus Soares de Souza</p>
                 </li>
                 <li class="lista-rodape__item">
-                    <a href="#" class="lista-rodape__link">Coordenadora: Erica Feio Carneiro Nunes</a>
+                    <p class="lista-rodape__nome">Coordenadora: Erica Feio Carneiro Nunes</p>
                 </li>
             </ul>
 
             <ul class="lista-rodape">
                 <li class="lista-rodape__titulo">Autores</li>
+
+                <li class="lista-rodape__item">
+                    <p class="lista-rodape__nome">Profa. Erica Feio Carneiro Nunes</p>
+                </li>
+                <li class="lista-rodape__item">
+                    <p class="lista-rodape__nome">Gabriel Pelais Dias</p>
+                </li>
+                <li class="lista-rodape__item">
+                    <p class="lista-rodape__nome">Matheus da Silva Gomes</p>
+                </li>
+                <li class="lista-rodape__item">
+                    <p class="lista-rodape__nome">Maythê Ribeiro de Medeiros</p>
+                </li>
+                <li class="lista-rodape__item">
+                    <p class="lista-rodape__nome">Thalyta Karollyna Costa Vilhena</p>
+                </li>
+                <li class="lista-rodape__item">
+                    <p class="lista-rodape__nome">Thiago dos Santos Batista</p>
+                </li>
+                
+                <!--
                 <li class="lista-rodape__item">
                     <a href="#" class="lista-rodape__link">Profa. Erica Feio Carneiro Nunes</a>
                 </li>
@@ -248,7 +269,7 @@
                 </li>
                 <li class="lista-rodape__item">
                     <a href="#" class="lista-rodape__link">Thiago dos Santos Batista</a>
-                </li>
+                </li> -->
             </ul>
 
             <ul class="lista-rodape">
